tests/golden/type_errors/len_result_assignment_mismatch.cd
let n = len([1]);
n = "bad";
